[project]
name = "agentm-terminal-bench"
version = "0.1.0"
description = "Harbor agent adapter for AgentM to run Terminal-Bench evaluations"
requires-python = ">=3.12"
dependencies = [
    "harbor>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentm_terminal_bench"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
